# verabench3.0

./: .env.example  .gitignore  CONFIG.md  LIMITS.md  README.md  main.py  main_final_answer.py  main_judge.py  main_rag.py  main_routing.py  main_tool_calling.py  pyproject.toml  router_prompt.json  run_all_benchmarks.py
.deepeval/: .deepeval_telemetry.txt
src/: __init__.py  bubble_visualizer.py  data_loader.py  inference_client.py  logger.py  metrics.py  model_config.py  rate_limiter.py  result_aggregator.py  visualizer.py
tasks/final_answer/: dataset.json  dataset_short.json  metrics.py  prompt.json
tasks/judge/: dataset.json  dataset_short.json  metrics.py  prompt.json
tasks/rag/: dataset.json  dataset_short.json  metrics.py  mock_database.json  prompt.json
tasks/routing/: dataset.json  dataset_short.json  metrics.py
tasks/tool_calling/: dataset.json  dataset_short.json  metrics.py  prompt.json
